# docs/swagger.yaml
@@ -8,6 +8,13 @@ definitions:
       username:
         type: string
     type: object
+  github_com_nabidam_gin-starter_internal_data_request.UserLogin:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   github_com_nabidam_gin-starter_internal_data_response.UserResponse:
     properties:
       created_at:
@@ -22,6 +29,30 @@ definitions:
 info:
   contact: {}
 paths:
+  /auth/login:
+    post:
+      description: Login using email and password
+      parameters:
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_nabidam_gin-starter_internal_data_request.UserLogin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_nabidam_gin-starter_internal_data_response.UserResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_nabidam_gin-starter_internal_data_response.UserResponse'
+      summary: Login using email and password
+      tags:
+      - auth
   /users:
     get:
       description: Get all users
