# internal/data/request/user.go
@@ -5,3 +5,8 @@ type UserCreate struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type UserLogin struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
